chore: fix windows tests - part 2
commit 4ffcf10d668a3789733d16c322c7982c0db46468
Author: Kevin <kevin@dendron.so>
Date:   Wed Jul 28 14:26:41 2021 -0700

    chore: fix tests

commit 35bc5565355de95c83dccc30b2051a1062cffb24
Author: Kevin <kevin@dendron.so>
Date:   Wed Jul 28 14:11:40 2021 -0700

    invalidate cache

commit 5fbc64ce73a0b7c7f67d6e3785dae2d8ec6c9814
Author: Kevin <kevin@dendron.so>
Date:   Wed Jul 28 13:52:43 2021 -0700

    update ci builds

commit e74b2d8750ad21c2e1a69cb5b446c7c869536bc5
Author: Kevin <kevin@dendron.so>
Date:   Wed Jul 28 13:36:04 2021 -0700

    chore: update tests

commit e3b6e7352f6c6889347d079fe513ab9f35a9a497
Author: Kevin Lin <kevinslin8@gmail.com>
Date:   Wed Jul 28 13:30:10 2021 -0700

    test fixes

commit 3f5f2d30a66a13300db0b6a66c4959f34f492f30
Author: Kevin <kevin@dendron.so>
Date:   Wed Jul 28 12:34:28 2021 -0700

    chore: add fix/ to ci test

commit 0abb836011a47f408ed565dc3e52ddcdf834f8b1
Author: Kevin <kevin@dendron.so>
Date:   Wed Jul 28 12:33:30 2021 -0700

    update timeout

commit 84327fc837b599dc4b60bdc9ff2ad01e17802a62
Author: Kevin <kevin@dendron.so>
Date:   Wed Jul 28 12:33:07 2021 -0700

    Revert "spike: only run windows tests"

    This reverts commit 2282890372f682ca287fe7820e77ce47237f1cd5.

commit d0d3040eb6fa0fe723487701b8eaf2833447b968
Author: Kevin Lin <kevinslin8@gmail.com>
Date:   Wed Jul 28 12:14:27 2021 -0700

    fix sinon issues

commit 5293492ef2bc47bef5828c2b5c56a55749746ebe
Author: Kevin Lin <kevinslin8@gmail.com>
Date:   Wed Jul 28 11:57:45 2021 -0700

    spike: only run windows tests

commit c439e47db2a5b8515e16f3db837cec94118bc64c
Author: Kevin Lin <kevinslin8@gmail.com>
Date:   Wed Jul 28 11:55:14 2021 -0700

    fix test issues

commit 8e724d66c84e40a9526c48967f76c5f48f7d61cc
Author: Kevin Lin <kevinslin8@gmail.com>
Date:   Wed Jul 28 08:16:12 2021 -0700

    chore: fix next-server build on windows

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,12 +3,8 @@ name: CI
 on:
   push:
     branches:
-      - github-actions
       - master
       - integ-publish
-      - dev-kevin
-      - dev
-      - feat/*
   pull_request:
     branches:
       - master
@@ -45,7 +41,7 @@ jobs:
             env: Get-ChildItem Env:\
             versions: choco --version
 
-    timeout-minutes: 45
+    timeout-minutes: 40
 
     runs-on: ${{ matrix.os }}
 
@@ -71,7 +67,7 @@ jobs:
             node_modules
             packages/*/node_modules
             packages/*/.vscode-test
-          key: ${{ runner.os }}-${{ matrix.node-version }}-node-modules-${{ hashFiles('yarn.lock')}}
+          key: ${{ runner.os }}-${{ matrix.node-version }}-node-modules-1-${{ hashFiles('yarn.lock')}}
 
       - name: Restore Node modules cache for Windows
         if: runner.os == 'Windows'
@@ -82,7 +78,7 @@ jobs:
             node_modules
             packages\*\node_modules
             packages\*\.vscode-test
-          key: ${{ runner.os }}-${{ matrix.node-version }}-node-modules-${{ hashFiles('yarn.lock')}}
+          key: ${{ runner.os }}-${{ matrix.node-version }}-node-modules-1-${{ hashFiles('yarn.lock')}}
 
       - name: Set up Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
