--- a/.github/workflows/ci-windows-test.yml
+++ b/.github/workflows/ci-windows-test.yml
@@ -14,9 +14,9 @@ jobs:
           - windows-latest
         node-version:
           - 12.x
-          # - 14.x
+          - 14.x
         suite:
-          # - cli
+          - cli
           - plugin
 
         include:
