--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -102,7 +102,8 @@
       "profile": "https://serendipidata.com/",
       "contributions": [
         "blog",
-        "doc"
+        "doc",
+        "code"
       ]
     },
     {
