chore: added task

--- a/packages/dendron-cli/.vscode/tasks.json
+++ b/packages/dendron-cli/.vscode/tasks.json
@@ -49,6 +49,15 @@
         "cwd": "/Users/kevinlin/Dendron"
       },
       "problemMatcher": []
+    },
+    {
+      "label": "import-pod",
+      "type": "shell",
+      "command": "node --inspect dendron_setup/dendron/packages/dendron-cli/lib/bin/dendron-cli importPod --wsRoot ~/Dendron --podId dendron.gdoc --podSource builtin",
+      "options": {
+        "cwd": "D:/"
+      },
+      "problemMatcher": []
     }
   ]
 }
