--- a/packages/dendron-cli/package.json
+++ b/packages/dendron-cli/package.json
@@ -50,9 +50,11 @@
     "@dendronhq/engine-server": "^0.53.0",
     "@dendronhq/pods-core": "^0.53.0",
     "@jcoreio/async-throttle": "^1.3.2",
+    "@types/prompts": "^2.0.14",
     "fs-extra": "^9.0.1",
     "gray-matter": "^4.0.2",
     "lodash": "^4.17.19",
+    "prompts": "^2.4.1",
     "rsync": "^0.6.1",
     "yargs": "^15.4.1"
   },
