--- a/packages/dendron-cli/package.json
+++ b/packages/dendron-cli/package.json
@@ -69,6 +69,7 @@
     "jest-serializer-path": "^0.1.15",
     "rimraf": "^3.0.2",
     "ts-jest": "^23.10.3",
+    "ts-json-schema-generator": "^0.95.0",
     "ts-node": "^7.0.1",
     "tslint": "^5.11.0",
     "tslint-config-prettier": "^1.15.0"
