chore: enable markdown rendering

--- a/packages/dendron-next-server/package.json
+++ b/packages/dendron-next-server/package.json
@@ -67,6 +67,7 @@
     "react-d3-tree": "^1.16.1",
     "react-dom": "17.0.1",
     "react-icons": "^3.11.0",
+    "react-markdown": "^6.0.3",
     "react-redux": "^7.2.3",
     "sass": "^1.35.1",
     "swr": "^0.3.9",
