--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   "scripts": {
     "setup": "yarn && yarn bootstrap:bootstrap && yarn bootstrap:build && yarn setup:cli",
     "setup:cli": "./bootstrap/scripts/chmod-cli.js",
+    "gen:data": "node packages/dendron-cli/lib/bin/dendron-cli.js dev generate_json_schema_from_config",
     "cleanup": "./bootstrap/scripts/cleanup.sh",
     "release": "standard-version",
     "format": "lerna exec --parallel --ignore @dendronhq/dendron-11ty -- yarn format",
