--- a/packages/plugin-core/package.json
+++ b/packages/plugin-core/package.json
@@ -159,7 +159,7 @@
       },
       {
         "command": "dendron.lookupNote",
-        "title": "Dendron: Note Lookup",
+        "title": "Dendron: Lookup Note",
         "desc": "Initiate note lookup",
         "when": "dendron:pluginActive"
       },
@@ -167,14 +167,9 @@
         "command": "dendron.lookupSchema",
         "title": "Dendron: Lookup Schema",
         "desc": "Initiate schema lookup",
+        "when": "dendron:pluginActive",
         "docLink": "dendron.topic.lookup.md",
         "docPreview": "![](https://foundation-prod-assetspublic53c57cce-8cpvgjldwysl.s3-us-west-2.amazonaws.com/assets/images/schema-lookup.gif)"
-      },
-      {
-        "command": "dendron.lookupSchemaV3",
-        "title": "Dendron: Schema Lookup",
-        "desc": "Initiate Schema Lookup",
-        "when": "dendron:pluginActive" 
       },
       {
         "command": "dendron.reloadIndex",
