--- a/packages/plugin-core/.vscode/launch.json
+++ b/packages/plugin-core/.vscode/launch.json
@@ -144,6 +144,26 @@
       "outFiles": ["${workspaceFolder}/out/src/test/**/*.js"]
     },
     {
+      "name": "Extension Integ Tests - File (with extensions)",
+      "type": "extensionHost",
+      "request": "launch",
+      "runtimeExecutable": "${execPath}",
+      "args": [
+        "--extensionDevelopmentPath=${workspaceFolder}",
+        "--extensionTestsPath=${workspaceFolder}/out/src/test/suite-integ/index",
+      ],
+      "env": {
+        "STAGE": "test",
+        "TEST_TO_RUN": "${fileBasenameNoExtension}"
+      },
+      "skipFiles": [
+        "<node_internals>/**/*.js",
+        "${workspaceFolder}/**/node_modules/mocha/**/*.js",
+        "**/extensionHostProcess.js"
+      ],
+      "outFiles": ["${workspaceFolder}/out/src/test/**/*.js"]
+    },
+    {
       "name": "Extension Integ Tests - File Remote",
       "type": "extensionHost",
       "request": "launch",
