--- a/packages/plugin-core/package.json
+++ b/packages/plugin-core/package.json
@@ -167,6 +167,7 @@
         "command": "dendron.lookupSchema",
         "title": "Dendron: Lookup Schema",
         "desc": "Initiate schema lookup",
+        "when": "dendron:pluginActive",
         "docLink": "dendron.topic.lookup.md",
         "docPreview": "![](https://foundation-prod-assetspublic53c57cce-8cpvgjldwysl.s3-us-west-2.amazonaws.com/assets/images/schema-lookup.gif)"
       },
