--- a/packages/common-all/package.json
+++ b/packages/common-all/package.json
@@ -47,6 +47,7 @@
     "@types/unist": "^2.0.3",
     "@types/yamljs": "^0.2.31",
     "dropbox": "^4.0.30",
+    "fuse.js": "^6.4.6",
     "github-slugger": "^1.3.0",
     "gray-matter": "^4.0.2",
     "isomorphic-fetch": "^2.2.1",
