--- a/packages/plugin-core/package.json
+++ b/packages/plugin-core/package.json
@@ -734,6 +734,12 @@
     "markdown.previewStyles": [
       "./media/fontello/css/fontello.css",
       "./media/markdown.css"
+    ],
+    "yamlValidation": [
+      {
+        "fileMatch": "dendron.yml",
+        "url": "./../common-all/data/dendron-yml.validator.json"
+      }
     ]
   },
   "icon": "assets/images/logo.png",
