--- a/packages/nextjs-template/package.json
+++ b/packages/nextjs-template/package.json
@@ -12,7 +12,9 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "export": "next build && next export"
+    "export": "next build && next export",
+    "sync:theme": "cp ../dendron-next-server/public/*theme.css public/",
+    "proto": "echo `pwd`"
   },
   "dependencies": {
     "@dendronhq/common-all": "^0.53.2",
@@ -20,14 +22,12 @@
     "lodash": "^4.17.21",
     "next": "10.2.0",
     "react": "17.0.1",
-    "react-autosuggest": "^10.1.0",
     "react-css-theme-switcher": "0.2.3",
     "react-dom": "17.0.1"
   },
   "devDependencies": {
     "@types/fs-extra": "^9.0.12",
     "@types/react": "17.0.14",
-    "@types/react-autosuggest": "^10.1.5",
     "eslint": "7.30.0",
     "eslint-config-next": "11.0.1",
     "fs-extra": "^10.0.0",
