--- a/packages/dendron-cli/package.json
+++ b/packages/dendron-cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dendronhq/dendron-cli",
-  "version": "0.53.2",
+  "version": "0.53.3",
   "description": "dendron-cli",
   "license": "GPLv3",
   "repository": {
@@ -43,12 +43,12 @@
     "test:unit:debug": "NODE_ENV=test  node --inspect node_modules/.bin/jest --runInBand"
   },
   "dependencies": {
-    "@dendronhq/api-server": "^0.53.2",
-    "@dendronhq/common-all": "^0.53.2",
-    "@dendronhq/common-server": "^0.53.2",
-    "@dendronhq/dendron-11ty": "^0.53.2",
-    "@dendronhq/engine-server": "^0.53.2",
-    "@dendronhq/pods-core": "^0.53.2",
+    "@dendronhq/api-server": "^0.53.3",
+    "@dendronhq/common-all": "^0.53.3",
+    "@dendronhq/common-server": "^0.53.3",
+    "@dendronhq/dendron-11ty": "^0.53.3",
+    "@dendronhq/engine-server": "^0.53.3",
+    "@dendronhq/pods-core": "^0.53.3",
     "@jcoreio/async-throttle": "^1.3.2",
     "@types/prompts": "^2.0.14",
     "fs-extra": "^9.0.1",
@@ -64,6 +64,7 @@
     "@types/lodash": "^4.14.158",
     "@types/node": "13.11.0",
     "@types/rsync": "^0.4.30",
+    "@types/semver": "^7.3.8",
     "@types/yargs": "^15.0.5",
     "coveralls": "^3.0.2",
     "jest": "^23.6.0",
