--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
       "packages/pods-core",
       "packages/dendron-cli",
       "packages/dendron-next-server",
+      "packages/nextjs-template",
       "packages/plugin-core",
       "packages/dendron-11ty",
       "packages/common-frontend"
@@ -50,11 +51,12 @@
     "format": "lerna exec --parallel --ignore @dendronhq/dendron-11ty -- yarn format",
     "format:pkg": "prettier --write",
     "lint": "eslint . --ext ts,tsx",
-    "lerna:typecheck": "lerna exec --parallel --ignore @dendronhq/dendron-next-server --ignore @dendronhq/dendron-11ty -- tsc -p tsconfig.build.json --noEmit",
+    "lerna:typecheck": "lerna exec --parallel --ignore @dendronhq/dendron-next-server --ignore @dendronhq/nextjs-template --ignore @dendronhq/dendron-11ty -- tsc -p tsconfig.build.json --noEmit",
     "bootstrap:bootstrap": "npx yarn --network-timeout 600000 && yarn gen:meta",
-    "bootstrap:build": "yarn bootstrap:build:common-all && yarn bootstrap:build:common-server &&  yarn bootstrap:build:engine-server &&  yarn bootstrap:build:pods-core && yarn bootstrap:build:common-test-utils && yarn bootstrap:build:api-server && yarn bootstrap:build:dendron-cli && yarn bootstrap:build:common-frontend && yarn bootstrap:build:engine-test-utils &&  yarn bootstrap:build:dendron-next-server && yarn bootstrap:build:plugin-core",
+    "bootstrap:build": "yarn bootstrap:build:common-all && yarn bootstrap:build:common-server &&  yarn bootstrap:build:engine-server &&  yarn bootstrap:build:pods-core && yarn bootstrap:build:common-test-utils && yarn bootstrap:build:api-server && yarn bootstrap:build:dendron-cli && yarn bootstrap:build:common-frontend && yarn bootstrap:build:engine-test-utils && yarn bootstrap:build:dendron-next-server && yarn bootstrap:build:plugin-core",
     "bootstrap:build:fast": "yarn bootstrap:build:common-all && yarn bootstrap:build:common-server && yarn bootstrap:build:common-test-utils && yarn bootstrap:build:engine-server &&  yarn bootstrap:build:api-server && yarn bootstrap:build:engine-test-utils && yarn bootstrap:build:dendron-cli && yarn bootstrap:build:plugin-core",
     "bootstrap:build:": "npx lerna run build --scope",
+    "bootstrap:build:nextjs-template": "yarn bootstrap:build: @dendronhq/nextjs-template",
     "bootstrap:build:dendron-next-server": "yarn bootstrap:build: @dendronhq/dendron-next-server",
     "bootstrap:build:common-all": "yarn bootstrap:build: @dendronhq/common-all",
     "bootstrap:build:common-frontend": "yarn bootstrap:build: @dendronhq/common-frontend",
