--- a/packages/plugin-core/package.json
+++ b/packages/plugin-core/package.json
@@ -166,6 +166,8 @@
         "command": "dendron.lookupNote",
         "title": "Dendron: Lookup Note",
         "desc": "Initiate note lookup",
+        "docLink": "dendron.topic.lookup.md",
+        "docPreview": "",
         "when": "dendron:pluginActive"
       },
       {
@@ -662,13 +664,13 @@
         "when": "dendron:pluginActive"
       },
       {
-        "command": "dendron.lookup",
+        "command": "dendron.lookupNote",
         "mac": "cmd+L",
         "key": "ctrl+l",
         "when": "dendron:pluginActive"
       },
       {
-        "command": "dendron.lookup",
+        "command": "dendron.lookupNote",
         "key": "ctrl+shift+j",
         "mac": "cmd+shift+j",
         "args": {
@@ -677,7 +679,7 @@
         "when": "dendron:pluginActive"
       },
       {
-        "command": "dendron.lookup",
+        "command": "dendron.lookupNote",
         "key": "ctrl+shift+s",
         "mac": "cmd+shift+s",
         "args": {
