feat: resolve vim keybinding conflict on initial install (#1103)
* chore: add util that gets user config path

* chore: add extension event for vim detection on initial install

* feat: resolve vim keybinding conflict on initial install

* chore: add test for keybinding resolution

* chore: add launch configuration for integ test with extensions enabled.

* fix: ensure keybinding config exists

* fix: create keybinding config and clean up after test

* fix: make sure keybinding config doesn't get lost when ran locally

* fix: check for existence of backed up keybinding config before restoring

* chore: clean up test launch configuration

* chore: code cleanup

* chore: mock user config dir instead of backup/overwrite system config in test

* chore: rename and add more analytics

* chore: clean up test code

--- a/packages/plugin-core/.vscode/launch.json
+++ b/packages/plugin-core/.vscode/launch.json
@@ -144,7 +144,7 @@
       "outFiles": ["${workspaceFolder}/out/src/test/**/*.js"]
     },
     {
-      "name": "Extension Integ Tests - File Remote",
+      "name": "Extension Integ Tests - File (with extensions)",
       "type": "extensionHost",
       "request": "launch",
       "runtimeExecutable": "${execPath}",
