chore: add hikchoi to reviewers list

--- a/.github/auto_assign.yml
+++ b/.github/auto_assign.yml
@@ -5,7 +5,7 @@ addAssignees: true
 reviewers: 
   - kevinslin
   - jonathanyeung
-  - cerebrarium
+  - hikchoi
 
 # A list of keywords to be skipped the process that add reviewers if pull requests include it 
 skipKeywords:
