chore: re-adding development settings in `test-workspace/dendron.yml`

--- a/test-workspace/dendron.yml
+++ b/test-workspace/dendron.yml
@@ -51,6 +51,8 @@ site:
             - vault2
 dev:
     enableWebUI: true
+    nextServerUrl: 'http://localhost:3000'
+    engineServerPort: 3005
 graph:
     zoomSpeed: 1
 initializeRemoteVaults: true
