spike: fix direct child filter rejected values

--- a/test-workspace/dendron.yml
+++ b/test-workspace/dendron.yml
@@ -49,6 +49,8 @@ site:
             - vault2
             - vault
             - vault2
+            - vaultThree
+            - vaultThree
 dev:
     enableWebUI: true
 graph:
