chore: add example notes to test workspace

--- a/test-workspace/dendron.yml
+++ b/test-workspace/dendron.yml
@@ -1,6 +1,9 @@
 version: 1
 vaults:
     -
+        fsPath: vault3
+        name: vaultThree
+    -
         fsPath: vault2
         visibility: private
     -
