--- a/package.json
+++ b/package.json
@@ -45,6 +45,10 @@
   "scripts": {
     "setup": "yarn && yarn bootstrap:bootstrap && yarn bootstrap:build && yarn setup:cli",
     "setup:cli": "./bootstrap/scripts/chmod-cli.js",
+    "build:patch:local": "cross-env UPGRADE_TYPE=patch PUBLISH_ENDPOINT=local ./bootstrap/scripts/buildPatch.sh",
+    "build:patch:remote": "cross-env UPGRADE_TYPE=patch PUBLISH_ENDPOINT=remote ./bootstrap/scripts/buildPatch.sh",
+    "build:minor:local": "cross-env UPGRADE_TYPE=minor PUBLISH_ENDPOINT=local ./bootstrap/scripts/buildPatch.sh",
+    "build:minor:remote": "cross-env UPGRADE_TYPE=minor PUBLISH_ENDPOINT=remote ./bootstrap/scripts/buildPatch.sh",
     "gen:data": "node packages/dendron-cli/lib/bin/dendron-cli.js dev generate_json_schema_from_config",
     "cleanup": "./bootstrap/scripts/cleanup.sh",
     "release": "standard-version",
@@ -92,12 +96,16 @@
     }
   },
   "lint-staged": {
-    "*.{ts,tsx}": ["prettier --config prettier.config.js --loglevel debug --write", "eslint"]
+    "*.{ts,tsx}": [
+      "prettier --config prettier.config.js --loglevel debug --write",
+      "eslint"
+    ]
   },
   "dependencies": {
     "@dendronhq/conventional-changelog-dendron": "^5.0.11",
     "@types/jest": "^23.3.6",
     "chalk": "^4.1.1",
+    "cross-env": "^7.0.3",
     "execa": "^5.0.0",
     "github-slugger": "^1.3.0",
     "typescript": "^4.1.5"
