--- a/packages/nextjs-template/package.json
+++ b/packages/nextjs-template/package.json
@@ -1,7 +1,8 @@
 {
   "name": "@dendronhq/nextjs-template",
-  "version": "0.50.1",
+  "version": "0.54.0",
   "license": "GPLv3",
+  "private": true,
   "repository": {
     "type": "git",
     "url": "ssh://git@github.com/dendronhq/dendron.git",
@@ -17,8 +18,8 @@
     "proto": "echo `pwd`"
   },
   "dependencies": {
-    "@dendronhq/common-all": "^0.53.3",
-    "@dendronhq/common-frontend": "^0.53.3",
+    "@dendronhq/common-all": "^0.54.0",
+    "@dendronhq/common-frontend": "^0.54.0",
     "lodash": "^4.17.21",
     "next": "10.2.0",
     "react": "17.0.1",
