chore: nextjs pr updates (#1114)
* chore: remove custom eslint

* chore: eslint fixes

* update eslint

--- a/test-workspace/dendron.yml
+++ b/test-workspace/dendron.yml
@@ -14,7 +14,7 @@ journal:
     dailyDomain: daily
     name: journal
     dateFormat: y.MM.dd
-    addBehavior: childOfDomain
+    addBehavior: childOfCurrent
     firstDayOfWeek: 1
 site:
     copyAssets: true
