--- a/packages/plugin-core/package.json
+++ b/packages/plugin-core/package.json
@@ -51,7 +51,7 @@
         },
         {
           "id": "dendron.calendar-view",
-          "name": "Calendar View",
+          "name": "Calendar",
           "type": "webview"
         },
         {
