--- a/packages/nextjs-template/package.json
+++ b/packages/nextjs-template/package.json
@@ -22,6 +22,7 @@
     "@dendronhq/common-frontend": "^0.54.1",
     "lodash": "^4.17.21",
     "next": "10.2.0",
+    "next-seo": "^4.26.0",
     "react": "17.0.1",
     "react-css-theme-switcher": "0.2.3",
     "react-dom": "17.0.1"
