fix: issue with direct child filter partially omitting values in quickpick (#1123)
* spike: fix direct child filter rejected values

* chore: add example notes to test workspace

* fix: only refresh buttons that needs to be refreshed

* fix: restore prefix after note modifier disable

* chore: remove direct child middleware

* chore: filter by depth during initial query

* chore: update picker on trigger if button is filter type

* fix: query data that strictly matches depth

* chore: fix mislabeled tests

--- a/test-workspace/dendron.yml
+++ b/test-workspace/dendron.yml
@@ -1,6 +1,9 @@
 version: 1
 vaults:
     -
+        fsPath: vault3
+        name: vaultThree
+    -
         fsPath: vault2
         visibility: private
     -
@@ -49,6 +52,8 @@ site:
             - vault2
             - vault
             - vault2
+            - vaultThree
+            - vaultThree
 dev:
     enableWebUI: true
     nextServerUrl: 'http://localhost:3000'
