spike: oauth added

--- a/packages/plugin-core/package.json
+++ b/packages/plugin-core/package.json
@@ -798,8 +798,9 @@
     "lodash": "^4.17.15",
     "luxon": "^1.25.0",
     "markdown-it": "^11.0.0",
-    "open": "^7.0.4",
+    "open": "^8.2.1",
     "open-graph-scraper": "^4.7.1",
+    "query-string": "^7.0.1",
     "replace-in-file": "^6.2.0",
     "semver": "^7.3.2",
     "unist-util-visit": "2.0.3",
