--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "lint-staged": ">=10",
     "lodash": "^4.17.15",
     "prettier": "^2.0.4",
-    "standard-version": "^8.0.0"
+    "standard-version": "^8.0.0",
+    "verdaccio": "^5.1.3"
   },
   "scripts": {
     "setup": "yarn && yarn bootstrap:bootstrap && yarn bootstrap:build && yarn setup:cli",
