--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
   "scripts": {
     "setup": "yarn && yarn bootstrap:bootstrap && yarn bootstrap:build && yarn setup:cli",
     "setup:cli": "./bootstrap/scripts/chmod-cli.js",
-    "setup:npmlogin": "npm-cli-login -u testUser -p testPass -e test@example.com",
+    "setup:npmlogin": "npm-cli-login -u dendron -p temporarydendronpassword -e test@dendron.com -r http://localhost:4873",
     "build:patch:local": "cross-env UPGRADE_TYPE=patch PUBLISH_ENDPOINT=local ./bootstrap/scripts/buildPatch.sh",
     "build:patch:remote": "cross-env UPGRADE_TYPE=patch PUBLISH_ENDPOINT=remote ./bootstrap/scripts/buildPatch.sh",
     "build:minor:local": "cross-env UPGRADE_TYPE=minor PUBLISH_ENDPOINT=local ./bootstrap/scripts/buildPatch.sh",
