--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "npm-cli-login": "^0.1.1",
     "prettier": "^2.0.4",
     "standard-version": "^8.0.0",
-    "verdaccio": "^5.1.3"
+    "verdaccio": "^5.1.3",
+    "vsce": "^1.96.1"
   },
   "scripts": {
     "setup": "yarn && yarn bootstrap:bootstrap && yarn bootstrap:build && yarn setup:cli",
