--- a/.github/workflows/test-build.yml
+++ b/.github/workflows/test-build.yml
@@ -50,9 +50,11 @@ jobs:
           node-version:  14.x
         run: yarn setup
 
-      - name: Set Up Local Registry
-        - run: yarn config set registry http://localhost:4873
-        - run: npm set registry http://localhost:4873/
+      - name: Set Up Yarn Local Registry
+        run: yarn config set registry http://localhost:4873
+      
+      - name: Set Up NPM Local Registry
+        run: npm set registry http://localhost:4873/
       
       - name: Build the VSIX
         env: 
