--- a/.github/workflows/test-build.yml
+++ b/.github/workflows/test-build.yml
@@ -48,7 +48,9 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version:  14.x
-        - run: yarn setup
+
+      - name: Yarn Setup
+        run: yarn setup
 
       - name: Set Up Yarn Local Registry
         run: yarn config set registry http://localhost:4873
