spike: another test

--- a/.github/workflows/create-vsix-artifact.yml
+++ b/.github/workflows/create-vsix-artifact.yml
@@ -24,38 +24,35 @@ jobs:
           yarn --version
 
       - name: Configure Git user
-        env: 
-          GOOGLE_OAUTH_CLIENT_ID: ${{ secrets.GOOGLE_OAUTH_CLIENT_ID }}
         run: |
           git config --global user.name CI
           git config --global user.email ci@dendron.so
-          echo "Client ID: $GOOGLE_OAUTH_CLIENT_ID"
 
-      # - name: Checkout source
-      #   uses: actions/checkout@v2
+      - name: Checkout source
+        uses: actions/checkout@v2
 
-      # - name: Set up Node.js
-      #   uses: actions/setup-node@v2
-      #   with:
-      #     node-version:  14.x
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version:  14.x
 
-      # - name: Yarn Setup
-      #   run: yarn setup
+      - name: Yarn Setup
+        run: yarn setup
 
-      # - name: Set Up Yarn Local Registry
-      #   run: yarn config set registry http://localhost:4873
+      - name: Set Up Yarn Local Registry
+        run: yarn config set registry http://localhost:4873
       
-      # - name: Set Up NPM Local Registry
-      #   run: npm set registry http://localhost:4873/
+      - name: Set Up NPM Local Registry
+        run: npm set registry http://localhost:4873/
       
-      # - name: Build the VSIX
-      #   env: 
-      #     GOOGLE_OAUTH_CLIENT_SECRET: ${{ secrets.GOOGLE_OAUTH_CLIENT_SECRET }}
-      #     GOOGLE_OAUTH_CLIENT_ID: ${{ secrets.GOOGLE_OAUTH_CLIENT_ID }}
-      #   run: yarn build:patch:local:ci
+      - name: Build the VSIX
+        env: 
+          GOOGLE_OAUTH_CLIENT_SECRET: ${{ secrets.GOOGLE_OAUTH_CLIENT_SECRET }}
+          GOOGLE_OAUTH_CLIENT_ID: ${{ secrets.GOOGLE_OAUTH_CLIENT_ID }}
+        run: yarn build:patch:local:ci
 
-      # - name: Upload VSIX Artifact
-      #   uses: actions/upload-artifact@v2
-      #   with:
-      #     name: vsix
-      #     path: ./packages/plugin-core/*.vsix
+      - name: Upload VSIX Artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: vsix
+          path: ./packages/plugin-core/*.vsix
