--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "lint": "eslint . --ext ts,tsx",
     "lerna:typecheck": "lerna exec --parallel --ignore @dendronhq/dendron-next-server --ignore @dendronhq/nextjs-template --ignore @dendronhq/dendron-11ty -- tsc -p tsconfig.build.json --noEmit",
     "bootstrap:bootstrap": "npx yarn --network-timeout 600000 && yarn gen:meta",
-    "bootstrap:build": "yarn bootstrap:build:common-all && yarn bootstrap:build:common-server &&  yarn bootstrap:build:engine-server &&  yarn bootstrap:build:pods-core && yarn bootstrap:build:common-test-utils && yarn bootstrap:build:api-server && yarn bootstrap:build:dendron-cli && yarn bootstrap:build:common-frontend && yarn bootstrap:build:engine-test-utils && yarn bootstrap:build:dendron-next-server && yarn bootstrap:build:plugin-core",
+    "bootstrap:build": "node bootstrap/scripts/buildAll.js",
     "bootstrap:build:fast": "yarn bootstrap:build:common-all && yarn bootstrap:build:common-server && yarn bootstrap:build:common-test-utils && yarn bootstrap:build:engine-server &&  yarn bootstrap:build:api-server && yarn bootstrap:build:engine-test-utils && yarn bootstrap:build:dendron-cli && yarn bootstrap:build:plugin-core",
     "bootstrap:build:": "npx lerna run build --scope",
     "bootstrap:build:nextjs-template": "yarn bootstrap:build: @dendronhq/nextjs-template",
