--- a/packages/plugin-core/.vscode/tasks.json
+++ b/packages/plugin-core/.vscode/tasks.json
@@ -23,6 +23,12 @@
       "type": "shell",
       "command": "node out/scripts/genConfig.js",
       "problemMatcher": []
-    }
+    },
+    {
+      "label": "variableSub",
+      "type": "shell",
+      "command": "node out/scripts/variableSubstitution.js",
+      "problemMatcher": []
+    },
   ]
 }
