spike: var substitution in ci test script

--- a/packages/plugin-core/.vscode/tasks.json
+++ b/packages/plugin-core/.vscode/tasks.json
@@ -27,7 +27,7 @@
     {
       "label": "variableSub",
       "type": "shell",
-      "command": "node out/scripts/variableSubstitution.js",
+      "command": "node ./out/scripts/variableSubstitution.js",
       "problemMatcher": []
     },
   ]
