spike: incremental change to ws

--- a/packages/plugin-core/.vscode/launch.json
+++ b/packages/plugin-core/.vscode/launch.json
@@ -18,7 +18,8 @@
       "skipFiles": [
         "<node_internals>/**/*.js",
         "${workspaceFolder}/**/node_modules/mocha/**/*.js",
-        "**/extension.js"
+        "**/extension.js",
+        "**/extensionHostProcess.js"
       ],
       "env": {
         "STAGE": "dev",
