--- a/packages/plugin-core/package.json
+++ b/packages/plugin-core/package.json
@@ -757,7 +757,7 @@
     "watch": "yarn compile --watch",
     "build": "yarn compile",
     "compile": "tsc -p tsconfig.build.json",
-    "test": "node ./out/src/test/runTestInteg.js",
+    "test": "node ./out/scripts/variableSubstitution.js && node ./out/src/test/runTestInteg.js",
     "format": "echo nop",
     "vscode:uninstall": "node ./out/src/scripts/uninstallHook.js"
   },
