--- a/.github/workflows/create-vsix-artifact.yml
+++ b/.github/workflows/create-vsix-artifact.yml
@@ -1,10 +1,10 @@
-name: Create VSIX Artifact
+name: Early Seed Build
 
 on:
   push:
     branches:
-      - enhance/auth-build
-      - prerelease/*
+      - enhance/build-automation
+      # - prerelease/* TODO- re-enable after finishing testing.
 
 jobs:
   build:
@@ -56,3 +56,21 @@ jobs:
         with:
           name: vsix
           path: ./packages/plugin-core/*.vsix
+
+
+      - name: Publish VSIX to S3
+        shell: bash
+        env:
+          aws_key_id: ${{ secrets.DENDRON_BOT_S3_KEY_ID }}
+          aws_secret_access_key: ${{ secrets.DENDRON_BOT_S3_ACCESS_KEY }}
+        run: |
+          version=`cat ./packages/plugin-core/package.json | jq ".version" -r`
+          name=`cat ./packages/plugin-core/package.json | jq ".displayName" -r`
+          package="$name-$version.vsix"
+          BUCKET=org-dendron-public-assets
+          sudo apt-get update && sudo apt-get -y install awscli
+          aws configure set aws_access_key_id $aws_key_id
+          aws configure set aws_secret_access_key $aws_secret_access_key
+          aws configure set default.region us-east-1
+          aws s3 $package s3://$BUCKET/publish/$package
+          echo https://$BUCKET.s3.amazonaws.com/publish/$package
