spike: finalize branch pattern

--- a/.github/workflows/create-vsix-artifact.yml
+++ b/.github/workflows/create-vsix-artifact.yml
@@ -3,8 +3,7 @@ name: Early Seed Build
 on:
   push:
     branches:
-      - enhance/build-automation
-      # - prerelease/* TODO- re-enable after finishing testing.
+      - prerelease/*
 
 jobs:
   build:
