--- a/.github/workflows/create-vsix-artifact.yml
+++ b/.github/workflows/create-vsix-artifact.yml
@@ -1,9 +1,8 @@
-name: Create VSIX Artifact
+name: Early Seed Build
 
 on:
   push:
     branches:
-      - enhance/auth-build
       - prerelease/*
 
 jobs:
@@ -56,3 +55,20 @@ jobs:
         with:
           name: vsix
           path: ./packages/plugin-core/*.vsix
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.DENDRON_BOT_S3_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.DENDRON_BOT_S3_ACCESS_KEY }}
+          aws-region: us-east-1
+
+      - name: Publish VSIX to S3
+        run: |
+          version=`cat ./packages/plugin-core/package.json | jq ".version" -r`
+          name=`cat ./packages/plugin-core/package.json | jq ".displayName" -r`
+          package="$name-$version.vsix"
+          echo $package
+          BUCKET=org-dendron-public-assets
+          aws s3 cp ./packages/plugin-core/$package s3://$BUCKET/publish/$package
+          echo https://$BUCKET.s3.amazonaws.com/publish/$package
