--- a/packages/engine-server/package.json
+++ b/packages/engine-server/package.json
@@ -62,6 +62,7 @@
     "gray-matter": "^4.0.2",
     "klaw": "^3.0.0",
     "lodash": "^4.17.15",
+    "lru-cache": "^6.0.0",
     "mdast": "^3.0.0",
     "mdast-builder": "^1.1.1",
     "mdast-util-compact": "^2.0.1",
@@ -97,6 +98,7 @@
   },
   "devDependencies": {
     "@types/execa": "^2.0.0",
+    "@types/lru-cache": "^5.1.1",
     "coveralls": "^3.0.2",
     "cross-env": "^7.0.2",
     "jest": "^23.6.0",
