--- a/packages/plugin-core/package.json
+++ b/packages/plugin-core/package.json
@@ -782,6 +782,7 @@
     "ts-node": "^8.10.2",
     "vscode-test": "^1.3.0",
     "webpack": "^4.43.0",
+    "webpack-bundle-analyzer": "^4.4.2",
     "webpack-cli": "^3.3.12"
   },
   "dependencies": {
