--- a/.github/workflows/create-prerelease-branch.yml
+++ b/.github/workflows/create-prerelease-branch.yml
@@ -15,12 +15,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout source
+      - name: Checkout and Create Branch
         uses: actions/checkout@v2
         with:
           ref: master
-
-      - name: Checkout Branch
+          ssh-key: "${{ secrets.COMMIT_KEY }}"
         run: |
           git config user.name github-actions
           git config user.email github-actions@github.com
@@ -29,3 +28,13 @@ jobs:
           echo $branchName
           git checkout -b $branchName
           git push origin $branchName
+
+      # - name: Checkout Branch
+      #   run: |
+      #     git config user.name github-actions
+      #     git config user.email github-actions@github.com
+      #     version=`cat ./packages/plugin-core/package.json | jq ".version" -r | awk -F. -v OFS=. 'NF==1{print ++$NF}; NF>1{$NF=sprintf("%0*d", length($NF), ($NF+1)); print}'`
+      #     branchName="prerelease/${version}" 
+      #     echo $branchName
+      #     git checkout -b $branchName
+      #     git push origin $branchName
