--- a/.github/workflows/create-prerelease-branch.yml
+++ b/.github/workflows/create-prerelease-branch.yml
@@ -20,6 +20,8 @@ jobs:
         with:
           ref: master
           ssh-key: "${{ secrets.COMMIT_KEY }}"
+
+      - name: Checkout Branch
         run: |
           git config user.name github-actions
           git config user.email github-actions@github.com
@@ -28,13 +30,3 @@ jobs:
           echo $branchName
           git checkout -b $branchName
           git push origin $branchName
-
-      # - name: Checkout Branch
-      #   run: |
-      #     git config user.name github-actions
-      #     git config user.email github-actions@github.com
-      #     version=`cat ./packages/plugin-core/package.json | jq ".version" -r | awk -F. -v OFS=. 'NF==1{print ++$NF}; NF>1{$NF=sprintf("%0*d", length($NF), ($NF+1)); print}'`
-      #     branchName="prerelease/${version}" 
-      #     echo $branchName
-      #     git checkout -b $branchName
-      #     git push origin $branchName
