--- a/.github/workflows/create-prerelease-branch.yml
+++ b/.github/workflows/create-prerelease-branch.yml
@@ -1,9 +1,11 @@
+# Creates a prerelease branch off of master every Thursday, 7 PM UTC
 name: Create Prerelease Branch
 
+# See documentation on POSIX cron syntax here: https://docs.github.com/en/actions/reference/events-that-trigger-workflows#scheduled-events
+# Scheduled to run at 7 PM UTC on Thursdays
 on:
-  push:
-    branches:
-      - chore/create-prerelease-branch-build-action
+  schedule:
+    - cron:  '0 19 * * 4'
 
 jobs:
   build:
@@ -14,6 +16,9 @@ jobs:
 
     runs-on: ubuntu-latest
 
+    # The commit key is necessary in order for this pipeline to trigger a
+    # subsequent pipeline. Github prevents this behavior by default to prevent
+    # inifinte loops of workflows
     steps:
       - name: Checkout and Create Branch
         uses: actions/checkout@v2
@@ -21,6 +26,7 @@ jobs:
           ref: master
           ssh-key: "${{ secrets.COMMIT_KEY }}"
 
+      # Bump the version number from what's in package.json for the plugin
       - name: Checkout Branch
         run: |
           git config user.name github-actions
