--- a/test-workspace/dendron.yml
+++ b/test-workspace/dendron.yml
@@ -30,9 +30,10 @@ site:
     logo: vault/assets/images/logo.png
     siteFaviconPath: vault/assets/images/favicon.ico
     siteUrl: 'https://foo.dev.dendron.so'
-    siteLastModified: true
     usePrettyRefs: true
     githubCname: 11ty.dendron.so
+    usePrettyLinks: true 
+    siteLastModified: true
     title: Dendron
     description: >-
         Dendron is a local-first, markdown based, hierarchical note taking tool.
