--- a/packages/common-all/package.json
+++ b/packages/common-all/package.json
@@ -46,6 +46,7 @@
     "@types/title": "^1.0.5",
     "@types/unist": "^2.0.3",
     "@types/yamljs": "^0.2.31",
+    "axios": "^0.21.4",
     "dropbox": "^4.0.30",
     "fuse.js": "^6.4.6",
     "github-slugger": "^1.3.0",
