--- a/package.json
+++ b/package.json
@@ -49,6 +49,8 @@
     "setup": "yarn && yarn bootstrap:bootstrap && yarn bootstrap:build && yarn setup:cli",
     "setup:cli": "./bootstrap/scripts/chmod-cli.js",
     "setup:npmlogin": "npm-cli-login -u dendron -p temporarydendronpassword -e test@dendron.com -r http://localhost:4873",
+    "build:prepatch:local": "cross-env UPGRADE_TYPE=prepatch PUBLISH_ENDPOINT=local ./bootstrap/scripts/buildPatch.sh",
+    "build:prepatch:remote": "cross-env UPGRADE_TYPE=prepatch PUBLISH_ENDPOINT=remote ./bootstrap/scripts/buildPatch.sh",
     "build:patch:local": "cross-env UPGRADE_TYPE=patch PUBLISH_ENDPOINT=local ./bootstrap/scripts/buildPatch.sh",
     "build:patch:local:ci": "cross-env UPGRADE_TYPE=patch PUBLISH_ENDPOINT=local BUILD_ENV=ci ./bootstrap/scripts/buildPatch.sh",
     "build:patch:remote": "cross-env UPGRADE_TYPE=patch PUBLISH_ENDPOINT=remote ./bootstrap/scripts/buildPatch.sh",
