--- a/packages/nextjs-template/package.json
+++ b/packages/nextjs-template/package.json
@@ -28,7 +28,7 @@
     "react": "17.0.1",
     "react-css-theme-switcher": "0.2.3",
     "react-dom": "17.0.1",
-    "saas": "^1.0.0"
+    "sass": "^1.39.0"
   },
   "devDependencies": {
     "@types/fs-extra": "^9.0.12",
