--- a/.github/auto_assign.yml
+++ b/.github/auto_assign.yml
@@ -6,6 +6,7 @@ reviewers:
   - kevinslin
   - jonathanyeung
   - hikchoi
+  - SeriousBug
 
 # A list of keywords to be skipped the process that add reviewers if pull requests include it 
 skipKeywords:
@@ -13,4 +14,4 @@ skipKeywords:
 
 # A number of reviewers added to the pull request
 # Set 0 to add all the reviewers (default: 0)
-numberOfReviewers: 0
+numberOfReviewers: 2
