--- a/packages/nextjs-template/package.json
+++ b/packages/nextjs-template/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dendronhq/nextjs-template",
-  "version": "0.58.3-alpha.0",
+  "version": "0.58.4-alpha.1",
   "license": "Apache-2.0",
   "private": true,
   "repository": {
@@ -15,16 +15,18 @@
     "lint": "next lint",
     "export": "next build && next export",
     "sync:theme": "cp ../dendron-next-server/public/*theme.css public/",
-    "proto": "echo `pwd`"
+    "postbuild": "next-sitemap --config sitemap.js"
+
   },
   "dependencies": {
     "@chakra-ui/react": "^1.6.7",
-    "@dendronhq/common-all": "^0.58.3-alpha.0",
-    "@dendronhq/common-frontend": "^0.58.3-alpha.0",
+    "@dendronhq/common-all": "^0.58.4-alpha.1",
+    "@dendronhq/common-frontend": "^0.58.4-alpha.1",
     "html-react-parser": "^1.2.8",
     "lodash": "^4.17.21",
     "next": "10.2.0",
     "next-seo": "^4.26.0",
+    "next-sitemap": "^1.6.168",
     "react": "17.0.1",
     "react-css-theme-switcher": "0.2.3",
     "react-dom": "17.0.1",
